# python_redis_examples

./: .gitignore  01_string.py  02_string.py  03_list.py  04_list_pipeline.py  05_set.py  06_publisher.py  06a_subscriber.py  06b_subscriber.py  07_geolocations.py  07a_geohash.py  07b_nearbylocation.py  08_hash.py  08a_hash_geo.py  09_csvtoredis.py  10_using_sales.py  11_redisjson.py  11a_redis_string_instead_of_json.py  11b_redis_json.py  config.yaml.template  db_config.py  njcities-lat-long.txt  pyproject.toml  readme.MD  tv_show_characters.json
